--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "concurrently 'turso dev --db-file local.db' 'nuxt dev'",
+    "dev:db": "turso dev --db-file local.db",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -12,18 +13,24 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.10",
     "@nuxt/eslint": "^1.5.2",
     "@nuxt/icon": "^1.15.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.11",
+    "concurrently": "^9.2.0",
+    "drizzle-orm": "^0.44.3",
     "nuxt": "^3.17.7",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.2",
     "@iconify-json/tabler": "^1.2.19",
     "daisyui": "^5.0.46",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
     "eslint-plugin-format": "^1.0.1"
   }
