--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@nuxt/eslint": "^1.5.2",
     "@nuxt/icon": "^1.15.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.11",
+    "better-auth": "^1.3.1",
     "concurrently": "^9.2.0",
     "drizzle-orm": "^0.44.3",
     "nuxt": "^3.17.7",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
